--- a/index.ipynb
+++ b/index.ipynb
@@ -170,7 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "df[]"
    ]
   },
   {
