Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,12 +166,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['business_id', 'cool', 'date', 'funny', 'review_id', 'stars', 'text',\n",
+       "       'useful', 'user_id', 'stars_squared'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "df[]"
+    "df.columns"
    ]
   },
   {
