Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,25 +166,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['business_id', 'cool', 'date', 'funny', 'review_id', 'stars', 'text',\n",
-       "       'useful', 'user_id', 'stars_squared'],\n",
-       "      dtype='object')"
+       "'2012-11-13'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "df.columns"
+    "df.columns\n",
+    "df['date'][1]"
    ]
   },
   {
