Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,7 +183,8 @@
    "source": [
     "# Your code here\n",
     "df.columns\n",
-    "df['date'][1]"
+    "df['date'][1]\n",
+    "df"
    ]
   },
   {
