--- a/index.ipynb
+++ b/index.ipynb
@@ -184,7 +184,7 @@
     "# Your code here\n",
     "df.columns\n",
     "df['date'][1]\n",
-    "df['date'].map(lambda x: )"
+    "df['date'].map(lambda x: df['date'][])"
    ]
   },
   {
