Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,16 +166,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2012-11-13'"
+       "1       12    2014-08-23\n",
+       "Name: date, dtype: object\n",
+       "2       12    2014-08-23\n",
+       "Name: date, dtype: object\n",
+       "4       12    2014-08-23\n",
+       "Name: date, dtype: object\n",
+       "5       12    2014-08-23\n",
+       "Name: date, dtype: object\n",
+       "10      12    2014-08-23\n",
+       "Name: date, dtype: object\n",
+       "                           ...                    \n",
+       "689     12    2014-08-23\n",
+       "Name: date, dtype: object\n",
+       "4874    12    2014-08-23\n",
+       "Name: date, dtype: object\n",
+       "564     12    2014-08-23\n",
+       "Name: date, dtype: object\n",
+       "3458    12    2014-08-23\n",
+       "Name: date, dtype: object\n",
+       "4206    12    2014-08-23\n",
+       "Name: date, dtype: object\n",
+       "Name: date, Length: 2610, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +205,7 @@
     "# Your code here\n",
     "df.columns\n",
     "df['date'][1]\n",
-    "df['date'].map(lambda x: df['date'][])"
+    "df['date'].map(lambda x: df['date'][6:7])"
    ]
   },
   {
