Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,14 +166,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12    2014-08-23\n",
+       "Name: date, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "df.columns\n",
     "df['date'][1]\n",
-    "xy = df['date'].map(lambda x: df['date'][6:7])"
+    "xy = df['date'].map(lambda x: df['date'][6:7])\n",
+    "xy[1]"
    ]
   },
   {
