--- a/index.ipynb
+++ b/index.ipynb
@@ -184,9 +184,7 @@
    "source": [
     "# Your code here\n",
     "df.columns\n",
-    "df['date'][1]\n",
-    "xy = df['date'].map(lambda x: df['date'][6:7])\n",
-    "xy[1]"
+    "df['date'][1]\n"
    ]
   },
   {
