Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -184,7 +184,7 @@
    "source": [
     "# Your code here\n",
     "df.columns\n",
-    "df['date'][1]\n"
+    "df['date'].map(lambda x: x[])\n"
    ]
   },
   {
