--- a/index.ipynb
+++ b/index.ipynb
@@ -166,17 +166,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12    2014-08-23\n",
-       "Name: date, dtype: object"
+       "1       1\n",
+       "2       0\n",
+       "4       9\n",
+       "5       2\n",
+       "10      6\n",
+       "       ..\n",
+       "689     6\n",
+       "4874    8\n",
+       "564     6\n",
+       "3458    0\n",
+       "4206    8\n",
+       "Name: date, Length: 2610, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +194,7 @@
    "source": [
     "# Your code here\n",
     "df.columns\n",
-    "df['date'].map(lambda x: x[])\n"
+    "df['date'].map(lambda x: x[6:7])\n"
    ]
   },
   {
