Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,35 +166,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1       1\n",
-       "2       0\n",
-       "4       9\n",
-       "5       2\n",
-       "10      6\n",
-       "       ..\n",
-       "689     6\n",
-       "4874    8\n",
-       "564     6\n",
-       "3458    0\n",
-       "4206    8\n",
-       "Name: date, Length: 2610, dtype: object"
+       "Index(['business_id', 'cool', 'date', 'funny', 'review_id', 'stars', 'text',\n",
+       "       'useful', 'user_id', 'stars_squared'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "df.columns\n",
-    "df['date'].map(lambda x: x[6:7])\n"
+    "\n",
+    "df['date'].map(lambda x: x[6:7])\n",
+    "df.columns\n"
    ]
   },
   {
@@ -212,7 +204,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df[]"
+    "df"
    ]
   },
   {
