--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df['text'].map(lambda )"
+    "df['text'].map(lambda x:len(x.split())"
    ]
   },
   {
